--- a/results/Summary.ipynb
+++ b/results/Summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "4b50a71d",
    "metadata": {},
    "outputs": [
@@ -32,25 +32,27 @@
        "    <tr>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th colspan=\"4\" halign=\"left\">mean</th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th colspan=\"4\" halign=\"left\">mse</th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">mse</th>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th>method</th>\n",
-       "      <th>cauchy</th>\n",
-       "      <th>extrapolation</th>\n",
-       "      <th>federated</th>\n",
+       "      <th>extrapolated</th>\n",
+       "      <th>knn</th>\n",
        "      <th>uniform</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dataset</th>\n",
-       "      <th>portion_idx</th>\n",
-       "      <th></th>\n",
+       "      <th>n_machine_per_order</th>\n",
+       "      <th>order</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -58,113 +60,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">abalone</th>\n",
-       "      <th>0</th>\n",
-       "      <td>5.0861435</td>\n",
-       "      <td>5.0499797</td>\n",
-       "      <td>5.050296</td>\n",
-       "      <td>5.120865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">abalone</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
        "      <th>1</th>\n",
-       "      <td>5.2030716</td>\n",
-       "      <td>5.091165</td>\n",
-       "      <td>5.088051</td>\n",
-       "      <td>5.265229</td>\n",
+       "      <td>5.0762444</td>\n",
+       "      <td>5.021346</td>\n",
+       "      <td>5.0844703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5.230649</td>\n",
-       "      <td>5.1761937</td>\n",
-       "      <td>5.1862664</td>\n",
-       "      <td>5.2537546</td>\n",
+       "      <td>5.504813</td>\n",
+       "      <td>5.021346</td>\n",
+       "      <td>5.0849113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.1927695</td>\n",
-       "      <td>5.104363</td>\n",
-       "      <td>5.10475</td>\n",
-       "      <td>5.2432165</td>\n",
+       "      <th rowspan=\"2\" valign=\"top\">4</th>\n",
+       "      <th>1</th>\n",
+       "      <td>5.2508135</td>\n",
+       "      <td>5.021346</td>\n",
+       "      <td>5.099915</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>airfoil</th>\n",
-       "      <th>0</th>\n",
-       "      <td>11.582081</td>\n",
-       "      <td>10.023884</td>\n",
-       "      <td>10.033759</td>\n",
-       "      <td>13.069772</td>\n",
+       "      <th>2</th>\n",
+       "      <td>6.1661067</td>\n",
+       "      <td>5.021346</td>\n",
+       "      <td>5.173799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <th>1</th>\n",
+       "      <td>5.5017014</td>\n",
+       "      <td>5.021346</td>\n",
+       "      <td>5.173799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>whitewine</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">whitewine</th>\n",
        "      <th>4</th>\n",
-       "      <td>0.5660841</td>\n",
-       "      <td>0.56204855</td>\n",
-       "      <td>0.5626449</td>\n",
-       "      <td>0.5670855</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0.5845832</td>\n",
+       "      <td>0.53148746</td>\n",
+       "      <td>0.5320973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">yacht</th>\n",
-       "      <th>0</th>\n",
-       "      <td>100.91061</td>\n",
-       "      <td>95.669624</td>\n",
-       "      <td>98.58478</td>\n",
-       "      <td>103.03451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">6</th>\n",
        "      <th>1</th>\n",
-       "      <td>101.940094</td>\n",
-       "      <td>100.65366</td>\n",
-       "      <td>98.97752</td>\n",
-       "      <td>104.34581</td>\n",
+       "      <td>0.55029404</td>\n",
+       "      <td>0.53148746</td>\n",
+       "      <td>0.5320973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>101.139885</td>\n",
-       "      <td>99.84711</td>\n",
-       "      <td>100.502205</td>\n",
-       "      <td>101.862076</td>\n",
+       "      <td>0.60876554</td>\n",
+       "      <td>0.53148746</td>\n",
+       "      <td>0.538303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100.09201</td>\n",
-       "      <td>101.72776</td>\n",
-       "      <td>99.33953</td>\n",
-       "      <td>101.7769</td>\n",
+       "      <th rowspan=\"2\" valign=\"top\">8</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0.56467146</td>\n",
+       "      <td>0.53148746</td>\n",
+       "      <td>0.5354227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.63023525</td>\n",
+       "      <td>0.53148746</td>\n",
+       "      <td>0.54184455</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>106 rows × 4 columns</p>\n",
+       "<p>136 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             mean                                      \n",
-       "                              mse                                      \n",
-       "method                     cauchy extrapolation   federated     uniform\n",
-       "dataset   portion_idx                                                  \n",
-       "abalone   0             5.0861435     5.0499797    5.050296    5.120865\n",
-       "          1             5.2030716      5.091165    5.088051    5.265229\n",
-       "          2              5.230649     5.1761937   5.1862664   5.2537546\n",
-       "          3             5.1927695      5.104363     5.10475   5.2432165\n",
-       "airfoil   0             11.582081     10.023884   10.033759   13.069772\n",
-       "...                           ...           ...         ...         ...\n",
-       "whitewine 4             0.5660841    0.56204855   0.5626449   0.5670855\n",
-       "yacht     0             100.91061     95.669624    98.58478   103.03451\n",
-       "          1            101.940094     100.65366    98.97752   104.34581\n",
-       "          2            101.139885      99.84711  100.502205  101.862076\n",
-       "          3             100.09201     101.72776    99.33953    101.7769\n",
+       "                                            mean                        \n",
+       "                                             mse                        \n",
+       "method                              extrapolated         knn     uniform\n",
+       "dataset   n_machine_per_order order                                     \n",
+       "abalone   2                   1        5.0762444    5.021346   5.0844703\n",
+       "                              2         5.504813    5.021346   5.0849113\n",
+       "          4                   1        5.2508135    5.021346    5.099915\n",
+       "                              2        6.1661067    5.021346    5.173799\n",
+       "          6                   1        5.5017014    5.021346    5.173799\n",
+       "...                                          ...         ...         ...\n",
+       "whitewine 4                   2        0.5845832  0.53148746   0.5320973\n",
+       "          6                   1       0.55029404  0.53148746   0.5320973\n",
+       "                              2       0.60876554  0.53148746    0.538303\n",
+       "          8                   1       0.56467146  0.53148746   0.5354227\n",
+       "                              2       0.63023525  0.53148746  0.54184455\n",
        "\n",
-       "[106 rows x 4 columns]"
+       "[136 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,10 +183,10 @@
     "                  'dakbilgic', 'mg_scale', 'bias', 'cpusmall_scale', 'aquatic', 'music', \n",
     "                  'redwine', 'ccpp', 'concrete', 'portfolio', 'building', 'yacht', \n",
     "                  'abalone', 'algerian', 'fish', 'communities', 'forestfires', 'cbm']\n",
-    "report_method = [\"uniform\", \"cauchy\", \"federated\",  \"extrapolation\"]\n",
+    "report_method = [\"uniform\", \"knn\",  \"extrapolated\"]\n",
     "log_file_dir = \"./realdata.csv\"   \n",
     "log = pd.read_csv(log_file_dir, header=None)\n",
-    "log.columns = \"iterate,time,mse,n_train,n_test,dataset,method,portion_idx\".split(',')\n",
+    "log.columns = \"iterate,time,mse,n_train,n_test,dataset,method,n_machine_per_order,order\".split(',')\n",
     "log[\"dataset\"] = log[\"dataset\"].apply(split_csv)\n",
     "\n",
     "\n",
@@ -201,7 +197,7 @@
     "summarize_log[\"mse\"] = np.array( summarize_log[\"mse\"], dtype = \"float32\")\n",
     "\n",
     "######## to pivot table \n",
-    "summary = pd.pivot_table(summarize_log, index=[\"dataset\", \"portion_idx\"],columns=[\"method\"], values=[ \"mse\"], aggfunc=[np.mean])\n",
+    "summary = pd.pivot_table(summarize_log, index=[\"dataset\", \"n_machine_per_order\", \"order\"],columns=[\"method\"], values=[ \"mse\"], aggfunc=[np.mean])\n",
     "str_summary = summary.astype(\"string\")\n",
     "\n",
     "\n",
@@ -216,27 +212,23 @@
    "execution_count": 5,
    "id": "5dd62607",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = [1,2,3]\n",
-    "[i for i in a if i**2 < 5]"
+    "str_summary.to_excel(\"./realdata_summary.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a65c1899",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90ca6bdd",
    "metadata": {},
    "outputs": [],
    "source": []
