remove sensitive data

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -82,34 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2af673b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[    4     7    17 ... 11899 11926 11927]\n",
-      "[    6    10    16 ... 11923 11929 11932]\n",
-      "[    1     3     5 ... 11912 11916 11922]\n",
-      "[    8     9    12 ... 11930 11931 11933]\n",
-      "[    0     2    15 ... 11915 11918 11928]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import KFold\n",
-    "kfolder = KFold(n_splits =5 , random_state = 1, shuffle = True)\n",
-    "\n",
-    "for i, (_, test_index) in enumerate(kfolder.split(X)):\n",
-    "    print(test_index)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d779fed4",
+   "id": "6fb62e1a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -117,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
